samples/_failures_safe/1761400023_5091b2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9ec04793.c: In function ‘main’:
./samples/SAFE/__tmp_9ec04793.c:176:9: error: expected declaration or statement at end of input
  176 |         if (token_count > 100) {
      |         ^~
./samples/SAFE/__tmp_9ec04793.c:176:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9ec04793.c:176:9: error: expected declaration or statement at end of input
